# django-df-chat

./: .gitignore  MANIFEST.in  README.md  dot.env.example  requirements.txt  setup.cfg
.github/workflows/: code_checks.yml  release.yml
df_chat/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
df_chat/asgi/: consumers.py  serializers.py  urls.py
df_chat/drf/: serializers.py  urls.py  viewsets.py
df_chat/migrations/: 0001_initial.py  0002_remove_roomuser_is_online_userchat.py
df_chat/templates/df_chat/: room.html
df_chat/tests/: base.py  test_chat.py  test_message_endpoint.py  utils.py
docs/: index.md
requirements/: base.in  local.txt  project.in  project.txt
src/apps/accounts/: models.py
src/apps/chat/: admin.py  apps.py  models.py
src/apps/chat/asgi/: consumers.py  urls.py
src/apps/chat/drf/: serializers.py  urls.py  viewsets.py
src/apps/chat/migrations/: 0001_initial.py
src/config/: urls.py
src/config/sections/: apps.py
src/config/settings/: local.py
tests/: asgi.py  async_router.py  settings.py  urls.py
tests/test_app/: tests.py
tools/: start-server.sh
